--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
+    "build": "vite build",
     "lint": "eslint . && stylelint \"**/*.css\""
   },
   "keywords": [],
